# capable_camera_firmware

./: .gitignore  CMakeLists.txt  README.md  bridge.sh  build.zig  fileAPI.zig  launch
camera/: CMakeLists.txt  app.cpp  bridge.sh  camera_config.json  config.json  config_charles.json  emmc_config.json  imx477.json  preview.sh
camera/core/: CMakeLists.txt  completed_request.hpp  frame_info.hpp  libcamera_app.cpp  libcamera_app.hpp  libcamera_encoder.hpp  options.cpp  options.hpp  post_processor.cpp  video_options.hpp
camera/encoder/: CMakeLists.txt  encoder.cpp  encoder.hpp  h264_encoder.cpp  h264_encoder.hpp  mjpeg_encoder.cpp  mjpeg_encoder.hpp  null_encoder.cpp  null_encoder.hpp
camera/image/: CMakeLists.txt
camera/network/: CMakeLists.txt  file_manager.cpp  file_manager.hpp  file_output.cpp  file_output.hpp  net_input.cpp  net_input.hpp  net_output.cpp  net_output.hpp  output.cpp  output.hpp
camera/output/: net_output.cpp  net_output.hpp  output.cpp  output.hpp
camera/post_processing_stages/: annotate_cv_stage.cpp
common/: CMakeLists.txt
common/inc/: i2c.hpp  imu.hpp  imu_data.hpp  imu_logger.hpp  inotify.hpp  interface.hpp  led_ctrlr.hpp  logger.hpp  spi.hpp  thread.hpp
common/src/: i2c.cpp  imu.cpp  imu_data.cpp  imu_logger.cpp  inotify.cpp  interface.cpp  led_ctrlr.cpp  logger.cpp  spi.cpp  thread.cpp
gnss/: CMakeLists.txt  app.cpp  gnss_serial.cpp  serial_options.cpp
gnss/inc/: app_options.hpp  gnss_data.hpp  gnss_logger.hpp  logger.hpp  thread.hpp
gnss/include/: gnss_serial.hpp  serial_options.hpp
gnss/src/: app.cpp  app_options.cpp  gnss_data.cpp  gnss_logger.cpp  logger.cpp  thread.cpp
imu/: CMakeLists.txt
imu/inc/: app_options.hpp  iim42652.hpp  spi.hpp
imu/src/: app.cpp  app_options.cpp  iim42652.cpp  spi.cpp
led/: CMakeLists.txt
led/inc/: app_options.hpp  is31fl3199.hpp
led/src/: app.cpp  app_options.cpp  is31fl3199.cpp
scripts/: eeprom_access.py  eeprom_access.sh  gps_assist_now.py
src/: benchmark.zig  bounded_array.zig  camera.zig  config.zig  datetime.zig  exif.zig  gnss.zig  handlers.zig  i2c.zig  imu.zig  info.zig  led_driver.zig  main.zig  recording.zig  spi.zig  system.zig  threads.zig
src/bus/: spi.zig
src/cfg/: camParamBase.zig  mutImgCfg.zig
src/handlers/: configure.zig  fileAPI.zig  files.zig  imu.zig  info.zig  status.zig
temp_support/: README.md  api.service  bridge.service
